# src/ImportAPI/controllers/ImportAPI.js
@@ -7,8 +7,8 @@ module.exports.getComponent = function getComponent (req, res, next) {
   ImportAPI.getComponent(req.swagger.params,res,next);
 };
 
-module.exports.postComponentIDs = function postComponentIDs (req, res, next) {
-  ImportAPI.postComponentIDs(req.swagger.params,res,next);
+module.exports.getComponentIDs = function postComponentIDs (req, res, next) {
+  ImportAPI.getComponentIDs(req.swagger.params,res,next);
 };
 
 module.exports.getOperations = function getOperations (req, res, next) {
